--- a/action.yaml
+++ b/action.yaml
@@ -2,4 +2,4 @@ name: 'My Custom Action'
 description: 'Checkout, setup JDK and Gradle'
 runs:
   using: 'node12'
-  main: 'dist/index.js'
+  main: 'src/index.js'
